@@ -23,8 +23,17 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    implementation('org.projectlombok:lombok:1.18.30')
+    annotationProcessor('org.projectlombok:lombok:1.18.30')
+
+    testImplementation('org.projectlombok:lombok:1.18.30')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.30')
+
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.2.4'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
